PSGI::Hector 1.2 -- 01/07/2014

	Now only creates session cookies if sessions are used.
	
	Middleware added


PSGI::Hector 1.1 -- 03/03/2014

	Fixed env passing to response class
	
	Updated docs


PSGI::Hector 1.0 -- 22/02/2014

	Initial Release