@@ -7,6 +7,7 @@ my $build = Module::Build->new(
 	dist_author => 'MacGyveR <dumb@cpan.org>',
 	dist_abstract => 'Very simple PSGI web framework',
 	requires => {
+		"perl" => "5.006",
 		"CGI::Simple::Cookie" => 0,
 		"HTTP::Response" => 0,
 		"Plack" => 0,
@@ -16,14 +17,19 @@ my $build = Module::Build->new(
 		"Template" => 0,
 		"File::Spec" => 0,
 		"Class::Load" => 0,
-		"Cache::FileCache" => 0,
-		"File::Temp" => 0,
-		"Plack::Middleware::Static::Minifier" => 0,
-		"Plack::Middleware::Deflater" => 0
+		"Plack::Middleware::MCCS" => 0,
+		"CSS::Minifier::XS" => 0,
+		"JavaScript::Minifier::XS" => 0,
+		"IO::Compress::Gzip" => 0
 	},
 	build_requires => {
 		"Test::More" => 0
 	},
-	create_makefile_pl => 'traditional'
+	create_makefile_pl => 'traditional',
+	meta_merge => {
+		resources => {
+			repository => 'https://github.com/thedumbterminal/PSGI-Hector'
+		}
+	}
 );
 $build->create_build_script;
