@@ -27,25 +27,26 @@
       "runtime" : {
          "requires" : {
             "CGI::Simple::Cookie" : "0",
-            "Cache::FileCache" : "0",
+            "CSS::Minifier::XS" : "0",
             "Carp" : "0",
             "Class::Load" : "0",
             "Data::Dumper" : "0",
             "File::Basename" : "0",
             "File::Spec" : "0",
-            "File::Temp" : "0",
             "HTTP::Response" : "0",
+            "IO::Compress::Gzip" : "0",
+            "JavaScript::Minifier::XS" : "0",
             "Plack" : "0",
-            "Plack::Middleware::Deflater" : "0",
-            "Plack::Middleware::Static::Minifier" : "0",
-            "Template" : "0"
+            "Plack::Middleware::MCCS" : "0",
+            "Template" : "0",
+            "perl" : "5.006"
          }
       }
    },
    "provides" : {
       "PSGI::Hector" : {
          "file" : "lib/PSGI/Hector.pm",
-         "version" : "1.2"
+         "version" : "1.3"
       },
       "PSGI::Hector::Base" : {
          "file" : "lib/PSGI/Hector/Base.pm"
@@ -85,7 +86,10 @@
    "resources" : {
       "license" : [
          "http://dev.perl.org/licenses/"
-      ]
+      ],
+      "repository" : {
+         "url" : "https://github.com/thedumbterminal/PSGI-Hector"
+      }
    },
-   "version" : "1.2"
+   "version" : "1.3"
 }
