@@ -3,20 +3,20 @@ abstract: 'Very simple PSGI web framework'
 author:
   - 'MacGyveR <dumb@cpan.org>'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  Module::Build: 0.40
+  Module::Build: '0.40'
 dynamic_config: 1
 generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: PSGI-Hector
 provides:
   PSGI::Hector:
     file: lib/PSGI/Hector.pm
-    version: 1.2
+    version: '1.3'
   PSGI::Hector::Base:
     file: lib/PSGI/Hector/Base.pm
   PSGI::Hector::Log:
@@ -40,19 +40,21 @@ provides:
   PSGI::Hector::Utils:
     file: lib/PSGI/Hector/Utils.pm
 requires:
-  CGI::Simple::Cookie: 0
-  Cache::FileCache: 0
-  Carp: 0
-  Class::Load: 0
-  Data::Dumper: 0
-  File::Basename: 0
-  File::Spec: 0
-  File::Temp: 0
-  HTTP::Response: 0
-  Plack: 0
-  Plack::Middleware::Deflater: 0
-  Plack::Middleware::Static::Minifier: 0
-  Template: 0
+  CGI::Simple::Cookie: '0'
+  CSS::Minifier::XS: '0'
+  Carp: '0'
+  Class::Load: '0'
+  Data::Dumper: '0'
+  File::Basename: '0'
+  File::Spec: '0'
+  HTTP::Response: '0'
+  IO::Compress::Gzip: '0'
+  JavaScript::Minifier::XS: '0'
+  Plack: '0'
+  Plack::Middleware::MCCS: '0'
+  Template: '0'
+  perl: '5.006'
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.2
+  repository: https://github.com/thedumbterminal/PSGI-Hector
+version: '1.3'
