@@ -1,4 +1,5 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.4007
+require 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -8,19 +9,19 @@ WriteMakefile
   'EXE_FILES' => [],
   'VERSION_FROM' => 'lib/PSGI/Hector.pm',
   'PREREQ_PM' => {
+                   'Plack::Middleware::MCCS' => 0,
                    'Plack' => 0,
+                   'IO::Compress::Gzip' => 0,
                    'File::Spec' => 0,
                    'Data::Dumper' => 0,
                    'Class::Load' => 0,
-                   'Cache::FileCache' => 0,
                    'Template' => 0,
                    'Carp' => 0,
                    'Test::More' => 0,
-                   'Plack::Middleware::Deflater' => 0,
+                   'JavaScript::Minifier::XS' => 0,
                    'HTTP::Response' => 0,
-                   'File::Temp' => 0,
+                   'CSS::Minifier::XS' => 0,
                    'CGI::Simple::Cookie' => 0,
-                   'Plack::Middleware::Static::Minifier' => 0,
                    'File::Basename' => 0
                  }
 )
