@@ -1,3 +1,8 @@
+PSGI::Hector 1.3 -- 29/10/2014
+
+	Now supports GET/POST parameters with multiple values.
+	Improved middleware for static assets
+
 PSGI::Hector 1.2 -- 01/07/2014
 
 	Now only creates session cookies if sessions are used.
